fixing text-wrapping

--- a/SCSS/listOfCourses.scss
+++ b/SCSS/listOfCourses.scss
@@ -167,8 +167,9 @@
 			}
 		}
 		button {
-			width: 163px;
+			width: 193px;
 			font-size: 1.25rem;
+      
 		}
 	}
 }
